# wg-manager

./: README.md  pyproject.toml
.github/workflows/: publish.yml
wg_manager/: __init__.py  cli.py  config.py  crypto.py  database.py  manager.py  models.py  ssh.py
