[project]
name = "wg-manager"
version = "0.1.0"
description = "WireGuard 管理工具 - 服务端配置、客户端管理、密钥生成、配置导出、SSH远程管理"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wg-manager = "wg_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wg_manager"]
